Only anchor along the scroller's block layout axis.

Also update corner selection to use the style of the scroller, not that of the
anchor node, for consistency.

BUG=646977

Review-Url: https://codereview.chromium.org/2360833002
Cr-Commit-Position: refs/heads/master@{#420329}

Former-commit-id: f347a360168703ac909eee252afbdd79849354ca