chrome/browser/ui/webui/extensions/extension_settings_browsertest.js
@@ -323,11 +323,8 @@ TEST_F('AutoScrollExtensionSettingsWebUITest', 'testAutoScroll', function() {
     assertEquals(0, document.body.scrollTop);
     this.nextStep();
   };
-  var scrollToOrigin = function() {
-    // Reset both top and left to avoid a scroll anchoring adjustment when the
-    // #dev-controls element is inserted (crbug.com/646977).
+  var scrollToTop = function() {
     document.body.scrollTop = 0;
-    document.body.scrollLeft = 0;
     this.nextStep();
   };
   // Test that a) autoscroll works on first page load and b) updating the
@@ -335,7 +332,7 @@ TEST_F('AutoScrollExtensionSettingsWebUITest', 'testAutoScroll', function() {
   this.steps = [this.waitForPageLoad,
                 checkHasScrollbar,
                 checkIsScrolled,
-                scrollToOrigin,
+                scrollToTop,
                 this.enableDeveloperMode,
                 checkScrolledToTop,
                 testDone];
